@@ -1,11 +1,12 @@
 Package: Rcgmin
 Type: Package
 Title: Conjugate gradient minimization of nonlinear functions with box constraints
-Version: 2013-02.20
-Date: 2013-02-20
-Author: John C. Nash
+Version: 2013-8.20
+Date: 2013-08-20
+Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
+        c("aut", "cre"), email = "nashjc@uottawa.ca") )
 Maintainer: John C. Nash <nashjc@uottawa.ca>
 Description: Conjugate gradient minimization of nonlinear functions with box constraints incorporating Dai/Yuan update
-Depends: numDeriv
+Depends: optextras
 License: GPL (>= 2)
 
