@@ -1,6 +1,7 @@
-grfwd <- function(par, userfn, fbase=NULL, eps=1.0e-7, ...) {
+grfwd <- function(par, userfn, fbase=NULL, ...) {
    # Forward different gradient approximation
-   if (is.null(fbase)) fbase <- userfn(par, ...)  # ensure we function value at par
+   eps<-.Machine$deriv.eps # DANGER: R core may reuse name
+   if (is.null(fbase)) fbase <- userfn(par, ...)  # ensure we have function value at par
    df <- rep(NA, length(par))
    teps <- eps * (abs(par) + eps)
    for (i in 1:length(par)) {
